Stage 2 finished: Conda, Requirements, Config, Project Setup

--- a/homework/homework1/notebooks/00_project_setup.ipynb
+++ b/homework/homework1/notebooks/00_project_setup.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d9f80b32",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,7 @@
     }
    ],
    "source": [
+    "#API KEY check\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
@@ -40,8 +41,24 @@
    "execution_count": null,
    "id": "3de11870",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20 30 40 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#NUMPY TEST\n",
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "arr2 = arr * 10\n",
+    "#Vectorized operation\n",
+    "print(arr2)\n"
+   ]
   }
  ],
  "metadata": {
