Stage 3 in progress, add summary, plot, util func

--- a/homework/homework1-3/notebooks/00_project_setup.ipynb
+++ b/homework/homework1-3/notebooks/00_project_setup.ipynb
@@ -59,6 +59,19 @@
     "#Vectorized operation\n",
     "print(arr2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "606aaccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Documentation Practice\n",
+    "# conda was used to create environments\n",
+    "# the numpy demo shows basic numpy operations, and the more otpimal versions\n",
+    "# .env is important because it allows us to use credentials without pushing them to github"
+   ]
   }
  ],
  "metadata": {
