--- a/homework/homework1-3/notebooks/hw03_python_fundamentals.ipynb
+++ b/homework/homework1-3/notebooks/hw03_python_fundamentals.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c4a945b2",
    "metadata": {},
    "outputs": [
@@ -57,6 +57,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   category  10 non-null     object\n",
+      " 1   value     10 non-null     int64 \n",
+      " 2   date      10 non-null     object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 372.0+ bytes\n",
       "           value\n",
       "count  10.000000\n",
       "mean   17.600000\n",
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "54ea6765",
    "metadata": {},
    "outputs": [
