Stage 5, update requirements/yml for parquet

--- a/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "{'missing': [], 'shape': (100, 2), 'na_total': 0}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/api_source-alpha_symbol-AAPL_20250817-212427.csv\n"
+      "Saved data/raw/api_source-alpha_symbol-AAPL_20250818-090247.csv\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "{'missing': [], 'shape': (25, 12), 'na_total': 25}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/scrape_site-example_table-markets_20250817-211839.csv\n"
+      "Saved data/raw/scrape_site-example_table-markets_20250818-090248.csv\n"
      ]
     }
    ],
@@ -222,11 +222,10 @@
    "metadata": {},
    "source": [
     "## Documentation\n",
-    "- API Source: https://www.alphavantage.co/query with params\n",
-    "TIME_SERIES_DAILY for funciotn type, AAPL for symbol, compact outputsize, and my free tier api key\n",
-    "- Scrape Source: (URL/table description)\n",
-    "- Assumptions & risks: (rate limits, selector fragility, schema changes)\n",
-    "- Confirm `.env` is not committed.\n"
+    "- API Source: https://www.alphavantage.co/query with params TIME_SERIES_DAILY for funciotn type, AAPL for symbol, compact outputsize, and my free tier api key\n",
+    "- Scrape Source: https://finance.yahoo.com/gainers -> table of top gainers in the market\n",
+    "- Assumptions & risks: To the API there are definitely rate limits, but in terms of the scrape since its just extracting from the http request that can be done whenever. Selector fragility was seen when the endpoint user here was changed to a premium endpoint. Therefore the coed here can only be guaranteed to work for AlphaVantage for only some time. Schema changes can be more likely than selector fragility due to endpoint changes, but they are still unlikely considering I only use a handful of columns\n",
+    "\n"
    ]
   }
  ],
