Finish Stage 5 README, ipnyb

--- a/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "{'missing': [], 'shape': (100, 2), 'na_total': 0}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/api_source-alpha_symbol-AAPL_20250818-090247.csv\n"
+      "Saved data/raw/api_source-alpha_symbol-AAPL_20250818-095417.csv\n"
      ]
     }
    ],
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['RUN', 'Sunrun Inc.', '', '13.92+3.44(+32.82%)', '+3.44', '+32.82%', '76.432M', '24.218M', '3.212B', '--', '-31.29%', ''], ['NXT', 'Nextracker Inc.', '', '60.58+6.59(+12.21%)', '+6.59', '+12.21%', '6.048M', '2.503M', '9.195B', '16.51', '+50.40%', ''], ['UNH', 'UnitedHealth Group Incorporated', '', '304.01+32.52(+11.98%)', '+32.52', '+11.98%', '67.496M', '17.987M', '275.334B', '13.16', '-47.47%', ''], ['FSLR', 'First Solar, Inc.', '', '199.95+19.90(+11.05%)', '+19.90', '+11.05%', '10.932M', '4.116M', '21.444B', '17.09', '-12.45%', ''], ['BHC', 'Bausch Health Companies Inc.', '', '8.34+0.83(+11.05%)', '+0.83', '+11.05%', '8.902M', '2.783M', '3.084B', '32.08', '+45.04%', ''], ['HSAI', 'Hesai Group', '', '25.59+2.27(+9.73%)', '+2.27', '+9.73%', '11.791M', '3.431M', '3.39B', '232.64', '+464.90%', ''], ['ARWR', 'Arrowhead Pharmaceuticals, Inc.', '', '20.51+1.73(+9.21%)', '+1.73', '+9.21%', '5.202M', '1.933M', '2.836B', '--', '-12.16%', ''], ['NU', 'Nu Holdings Ltd.', '', '13.10+1.09(+9.08%)', '+1.09', '+9.08%', '130.401M', '63.181M', '63.304B', '27.87', '-9.34%', ''], ['LYFT', 'Lyft, Inc.', '', '15.82+1.20(+8.21%)', '+1.20', '+8.21%', '35.423M', '16.023M', '6.43B', '68.78', '+36.38%', ''], ['GTLB', 'GitLab Inc.', '', '44.28+3.33(+8.13%)', '+3.33', '+8.13%', '5.416M', '4.58M', '7.315B', '492.00', '-4.49%', ''], ['ENPH', 'Enphase Energy, Inc.', '', '34.84+2.62(+8.13%)', '+2.62', '+8.13%', '20.906M', '9.266M', '4.555B', '27.01', '-70.90%', ''], ['ICUI', 'ICU Medical, Inc.', '', '120.95+9.05(+8.09%)', '+9.05', '+8.09%', '844,607', '259,643', '2.986B', '--', '-22.40%', ''], ['SRPT', 'Sarepta Therapeutics, Inc.', '', '21.81+1.51(+7.43%)', '+1.51', '+7.43%', '8.85M', '11.757M', '2.131B', '--', '-84.11%', ''], ['ZETA', 'Zeta Global Holdings Corp.', '', '19.13+1.32(+7.41%)', '+1.32', '+7.41%', '9.375M', '9.108M', '4.554B', '--', '-21.08%', ''], ['OS', 'OneStream, Inc.', '', '21.15+1.36(+6.87%)', '+1.36', '+6.87%', '5.324M', '1.581M', '5.136B', '--', '-27.82%', ''], ['MDB', 'MongoDB, Inc.', '', '218.26+13.89(+6.80%)', '+13.89', '+6.80%', '2.157M', '2.465M', '17.835B', '--', '-15.06%', ''], ['OSCR', 'Oscar Health, Inc.', '', '15.64+0.96(+6.54%)', '+0.96', '+6.54%', '24.634M', '25.437M', '4.044B', '--', '-11.24%', ''], ['SEE', 'Sealed Air Corporation', '', '31.58+1.74(+5.83%)', '+1.74', '+5.83%', '4.086M', '1.303M', '4.645B', '15.56', '-6.43%', ''], ['CNC', 'Centene Corporation', '', '28.49+1.56(+5.79%)', '+1.56', '+5.79%', '17.382M', '14.124M', '13.992B', '6.92', '-63.61%', ''], ['FINV', 'FinVolution Group', '', '9.33+0.51(+5.78%)', '+0.51', '+5.78%', '1.721M', '1.565M', '2.364B', '6.71', '+61.14%', ''], ['FROG', 'JFrog Ltd.', '', '45.11+2.38(+5.57%)', '+2.38', '+5.57%', '2.109M', '1.141M', '5.266B', '--', '+64.34%', ''], ['TPR', 'Tapestry, Inc.', '', '100.74+5.05(+5.28%)', '+5.05', '+5.28%', '6.808M', '3.95M', '20.966B', '122.85', '+148.25%', ''], ['UA', 'Under Armour, Inc.', '', '5.01+0.25(+5.25%)', '+0.25', '+5.25%', '14.739M', '3.525M', '2.184B', '22.77', '-37.45%', ''], ['UAA', 'Under Armour, Inc.', '', '5.17+0.25(+5.08%)', '+0.25', '+5.08%', '30.513M', '12.116M', '2.184B', '23.50', '-37.79%', ''], ['TLX', 'Telix Pharmaceuticals Limited', '', '11.54+0.55(+5.00%)', '+0.55', '+5.00%', '147,011', '52,656', '3.863B', '128.22', '-23.83%', '']]\n"
+      "[['PPCB', 'Propanc Biopharma, Inc. Common Stock', '', '8.37+5.50(+190.98%)', '+5.50', '+190.98%', '31.456M', '10,072', '97.191M', '--', '+239,066.67%', ''], ['DAY', 'Dayforce Inc', '', '66.44+13.56(+25.69%)', '+13.56', '+25.69%', '2.813M', '1.843M', '10.611B', '221.48', '-4.84%', ''], ['WULF', 'TeraWulf Inc.', '', '10.11+1.14(+12.71%)', '+1.14', '+12.71%', '41.58M', '51.801M', '3.965B', '--', '+106.21%', ''], ['RUN', 'Sunrun Inc.', '', '15.38+1.45(+10.45%)', '+1.45', '+10.45%', '16.63M', '24.218M', '3.548B', '--', '-31.29%', ''], ['HSAI', 'Hesai Group', '', '27.50+1.91(+7.46%)', '+1.91', '+7.46%', '1.01M', '3.431M', '3.643B', '250.00', '+464.90%', ''], ['WBTN', 'WEBTOON Entertainment Inc.', '', '16.13+1.16(+7.75%)', '+1.16', '+7.75%', '251,383', '561,338', '2.107B', '--', '+14.62%', ''], ['NXT', 'Nextracker Inc.', '', '65.50+4.92(+8.12%)', '+4.92', '+8.12%', '1.442M', '2.503M', '9.942B', '17.85', '+50.40%', ''], ['DUOL', 'Duolingo, Inc.', '', '351.99+25.06(+7.67%)', '+25.06', '+7.67%', '632,434', '1.198M', '16.129B', '143.67', '+57.80%', ''], ['NWL', 'Newell Brands Inc.', '', '5.86+0.40(+7.42%)', '+0.40', '+7.42%', '935,153', '9.22M', '2.458B', '--', '-26.22%', ''], ['ALVO', 'Alvotech', '', '8.58+0.55(+6.91%)', '+0.55', '+6.91%', '386,428', '295,959', '2.673B', '37.30', '-38.22%', ''], ['FSLR', 'First Solar, Inc.', '', '214.12+14.17(+7.09%)', '+14.17', '+7.09%', '2.111M', '4.116M', '22.964B', '18.30', '-12.45%', ''], ['KC', 'Kingsoft Cloud Holdings Limited', '', '14.39+0.81(+5.96%)', '+0.81', '+5.96%', '552,418', '1.902M', '4.047B', '--', '+436.76%', ''], ['MNSO', 'MINISO Group Holding Limited', '', '20.88+1.15(+5.83%)', '+1.15', '+5.83%', '107,896', '910,258', '6.38B', '18.98', '+26.39%', ''], ['NVO', 'Novo Nordisk A/S', '', '54.33+2.50(+4.83%)', '+2.50', '+4.83%', '11.678M', '14.432M', '234.578B', '13.86', '-61.25%', ''], ['APLD', 'Applied Digital Corporation', '', '14.94+0.85(+6.00%)', '+0.85', '+6.00%', '14.76M', '49.797M', '3.906B', '--', '+242.82%', ''], ['CAR', 'Avis Budget Group, Inc.', '', '163.71+8.08(+5.19%)', '+8.08', '+5.19%', '124,857', '1.295M', '5.762B', '--', '+75.08%', ''], ['ENPH', 'Enphase Energy, Inc.', '', '36.41+1.57(+4.51%)', '+1.57', '+4.51%', '3.682M', '9.266M', '4.761B', '28.22', '-70.90%', ''], ['ELF', 'e.l.f. Beauty, Inc.', '', '121.78+5.40(+4.64%)', '+5.40', '+4.64%', '215,946', '2.545M', '6.909B', '72.06', '-27.31%', ''], ['AMRN', 'Amarin Corporation plc', '', '16.40+0.75(+4.81%)', '+0.75', '+4.81%', '16,948', '110,720', '339.198M', '--', '+16.79%', ''], ['GDS', 'GDS Holdings Limited', '', '32.65+1.24(+3.95%)', '+1.24', '+3.95%', '395,285', '2.105M', '6.432B', '296.82', '+135.10%', ''], ['PCTY', 'Paylocity Holding Corporation', '', '177.44+5.48(+3.19%)', '+5.48', '+3.19%', '101,119', '541,066', '9.788B', '44.14', '+13.12%', ''], ['CELH', 'Celsius Holdings, Inc.', '', '59.47+2.17(+3.79%)', '+2.17', '+3.79%', '1.88M', '6.792M', '15.34B', '156.50', '+37.87%', ''], ['ALHC', 'Alignment Healthcare, Inc.', '', '15.55+0.50(+3.33%)', '+0.50', '+3.33%', '115,799', '3.422M', '3.08B', '--', '+75.20%', ''], ['CNC', 'Centene Corporation', '', '29.42+0.93(+3.26%)', '+0.93', '+3.26%', '2.101M', '14.124M', '14.449B', '7.14', '-63.61%', ''], ['USM', 'Array Digital Infrastructure, Inc.', '', '77.01+2.76(+3.72%)', '+2.76', '+3.72%', '1M', '316,295', '6.623B', '--', '+41.26%', '']]\n"
      ]
     },
     {
@@ -170,7 +170,7 @@
        "{'missing': [], 'shape': (25, 12), 'na_total': 25}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,19 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/scrape_site-example_table-markets_20250818-090248.csv\n"
+      "Saved data/raw/scrape_site-yahoo_finance_table-gainers_20250818-095418.csv\n"
      ]
     }
    ],
    "source": [
-    "_ = save_csv(df_scrape, prefix='scrape', site='example', table='markets')"
+    "_ = save_csv(df_scrape, prefix='scrape', site='yahoo_finance', table='gainers')"
    ]
   },
   {
