--- a/homework/homework5/stage05_data-storage_homework-starter.ipynb
+++ b/homework/homework5/stage05_data-storage_homework-starter.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAW -> /Users/Kushal/FRE/bootcamp_kushal_mamillapalli/homework/homework5/data/raw\n",
+      "PROC -> /Users/Kushal/FRE/bootcamp_kushal_mamillapalli/homework/homework5/data/processed\n"
+     ]
+    }
+   ],
    "source": [
     "import os, pathlib, datetime as dt\n",
     "import pandas as pd\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,31 +86,31 @@
        "      <th>0</th>\n",
        "      <td>2024-01-01</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>150.538348</td>\n",
+       "      <td>149.168691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-01-02</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>150.907464</td>\n",
+       "      <td>147.467096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-01-03</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>151.012834</td>\n",
+       "      <td>149.220475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-01-04</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>151.904050</td>\n",
+       "      <td>148.183244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-01-05</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>151.311154</td>\n",
+       "      <td>148.766324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -109,14 +118,14 @@
       ],
       "text/plain": [
        "        date ticker       price\n",
-       "0 2024-01-01   AAPL  150.538348\n",
-       "1 2024-01-02   AAPL  150.907464\n",
-       "2 2024-01-03   AAPL  151.012834\n",
-       "3 2024-01-04   AAPL  151.904050\n",
-       "4 2024-01-05   AAPL  151.311154"
+       "0 2024-01-01   AAPL  149.168691\n",
+       "1 2024-01-02   AAPL  147.467096\n",
+       "2 2024-01-03   AAPL  149.220475\n",
+       "3 2024-01-04   AAPL  148.183244\n",
+       "4 2024-01-05   AAPL  148.766324"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,15 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parquet engine not available. Install pyarrow or fastparquet to complete this step.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "PosixPath('data/processed/sample_20250818-093052.parquet')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -178,9 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'shape_equal': True, 'date_is_datetime': True, 'price_is_numeric': True}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def validate_loaded(original, reloaded):\n",
     "    checks = {\n",
@@ -196,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,8 +293,8 @@
    "metadata": {},
    "source": [
     "## 5) Documentation (TODO)\n",
-    "- Update README with a **Data Storage** section (folders, formats, env usage).\n",
-    "- Summarize validation checks and any assumptions."
+    "- Validation checks include comparing df after and saving for both pq and csv (validate_loaded).  \n",
+    "- Assumptions include parquet is working properly (proper installation needed) and any data typing done through parquet over CSV is correct (implicit vs explicit)."
    ]
   }
  ],
