--- a/homework/homework5/stage05_data-storage_homework-starter.ipynb
+++ b/homework/homework5/stage05_data-storage_homework-starter.ipynb
@@ -86,31 +86,31 @@
        "      <th>0</th>\n",
        "      <td>2024-01-01</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>149.168691</td>\n",
+       "      <td>150.129211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-01-02</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>147.467096</td>\n",
+       "      <td>149.641697</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-01-03</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>149.220475</td>\n",
+       "      <td>149.285432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-01-04</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>148.183244</td>\n",
+       "      <td>149.101848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-01-05</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>148.766324</td>\n",
+       "      <td>149.873934</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -118,11 +118,11 @@
       ],
       "text/plain": [
        "        date ticker       price\n",
-       "0 2024-01-01   AAPL  149.168691\n",
-       "1 2024-01-02   AAPL  147.467096\n",
-       "2 2024-01-03   AAPL  149.220475\n",
-       "3 2024-01-04   AAPL  148.183244\n",
-       "4 2024-01-05   AAPL  148.766324"
+       "0 2024-01-01   AAPL  150.129211\n",
+       "1 2024-01-02   AAPL  149.641697\n",
+       "2 2024-01-03   AAPL  149.285432\n",
+       "3 2024-01-04   AAPL  149.101848\n",
+       "4 2024-01-05   AAPL  149.873934"
       ]
      },
      "execution_count": 2,
@@ -154,7 +154,7 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/processed/sample_20250818-093052.parquet')"
+       "PosixPath('data/processed/sample_20250818-102348.parquet')"
       ]
      },
      "execution_count": 3,
@@ -290,11 +290,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c150700c",
    "metadata": {},
    "source": [
-    "## 5) Documentation (TODO)\n",
+    "## 5 Documentation\n",
     "- Validation checks include comparing df after and saving for both pq and csv (validate_loaded).  \n",
-    "- Assumptions include parquet is working properly (proper installation needed) and any data typing done through parquet over CSV is correct (implicit vs explicit)."
+    "- Assumptions include parquet is working properly (proper installation needed) and any data typing done through parquet over CSV is correct (implicit vs explicit).\n"
    ]
   }
  ],
