Stage 5 Project finished, partway into Stage 6 homework

--- a/project/notebooks/data_storage.ipynb
+++ b/project/notebooks/data_storage.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "05bb4482",
    "metadata": {},
    "source": [
     "# Homework Starter — Stage 05: Data Storage\n",
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "8745f1eb",
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a39ff827",
    "metadata": {},
    "source": [
     "## 1) Create or Load a Sample DataFrame\n",
@@ -53,6 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0ea666f8",
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b5fb79a",
    "metadata": {},
    "source": [
     "## 2) Save CSV to data/raw/ and Parquet to data/processed/ (TODO)\n",
@@ -149,6 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e895d65a",
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +188,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "502af70d",
    "metadata": {},
    "source": [
     "## 3) Reload and Validate (TODO)\n",
@@ -191,6 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "111e8b32",
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "ebf33f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +242,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a86f763d",
    "metadata": {},
    "source": [
     "## 4) Utilities (TODO)\n",
@@ -243,6 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "9c316884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,6 +311,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "fe-course",
    "language": "python",
