--- a/project/notebooks/python_fundamentals_summary.ipynb
+++ b/project/notebooks/python_fundamentals_summary.ipynb
@@ -124,6 +124,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "fe-course",
    "language": "python",
