--- a/project/notebooks/api_scrape_data.ipynb
+++ b/project/notebooks/api_scrape_data.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9ca563d0",
    "metadata": {},
    "source": [
     "# Homework Starter — Stage 04: Data Acquisition and Ingestion\n",
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "fdcdcc4c",
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7423b40",
    "metadata": {},
    "source": [
     "## Helpers (use or modify)"
@@ -48,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "cfe3adc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +72,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e752104d",
    "metadata": {},
    "source": [
     "## Part 1 — API Pull (Required)\n",
@@ -77,7 +82,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "id": "e6e84ee9",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -124,12 +132,13 @@
     "    df_api.columns = ['date','adj_close']\n",
     "#adjust for close\n",
     "# v_api = validate(df_api, ['date','adj_close']); v_api\n",
-    "v_api = validate(df_api, ['date','close']); v_api\n"
+    "v_api = validate(df_api, ['date','close']); v_api"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9586f02e",
    "metadata": {},
    "outputs": [
     {
@@ -146,6 +155,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5f26c72",
    "metadata": {},
    "source": [
     "## Part 2 — Scrape a Public Table (Required)\n",
@@ -155,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0e52fd26",
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "0beb3d50",
    "metadata": {},
    "outputs": [
     {
@@ -219,6 +231,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b3f1c98",
    "metadata": {},
    "source": [
     "## Documentation\n",
@@ -230,6 +243,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "fe-course",
    "language": "python",
