--- a/homework/stage04_data-acquisition-and-ingestion/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/stage04_data-acquisition-and-ingestion/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/api_source-alpha_symbol-AAPL_20250818-095417.csv\n"
+      "Saved data/raw/api_source-alpha_symbol-AAPL_20250820-103003.csv\n"
      ]
     }
    ],
@@ -161,13 +161,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['PPCB', 'Propanc Biopharma, Inc. Common Stock', '', '8.37+5.50(+190.98%)', '+5.50', '+190.98%', '31.456M', '10,072', '97.191M', '--', '+239,066.67%', ''], ['DAY', 'Dayforce Inc', '', '66.44+13.56(+25.69%)', '+13.56', '+25.69%', '2.813M', '1.843M', '10.611B', '221.48', '-4.84%', ''], ['WULF', 'TeraWulf Inc.', '', '10.11+1.14(+12.71%)', '+1.14', '+12.71%', '41.58M', '51.801M', '3.965B', '--', '+106.21%', ''], ['RUN', 'Sunrun Inc.', '', '15.38+1.45(+10.45%)', '+1.45', '+10.45%', '16.63M', '24.218M', '3.548B', '--', '-31.29%', ''], ['HSAI', 'Hesai Group', '', '27.50+1.91(+7.46%)', '+1.91', '+7.46%', '1.01M', '3.431M', '3.643B', '250.00', '+464.90%', ''], ['WBTN', 'WEBTOON Entertainment Inc.', '', '16.13+1.16(+7.75%)', '+1.16', '+7.75%', '251,383', '561,338', '2.107B', '--', '+14.62%', ''], ['NXT', 'Nextracker Inc.', '', '65.50+4.92(+8.12%)', '+4.92', '+8.12%', '1.442M', '2.503M', '9.942B', '17.85', '+50.40%', ''], ['DUOL', 'Duolingo, Inc.', '', '351.99+25.06(+7.67%)', '+25.06', '+7.67%', '632,434', '1.198M', '16.129B', '143.67', '+57.80%', ''], ['NWL', 'Newell Brands Inc.', '', '5.86+0.40(+7.42%)', '+0.40', '+7.42%', '935,153', '9.22M', '2.458B', '--', '-26.22%', ''], ['ALVO', 'Alvotech', '', '8.58+0.55(+6.91%)', '+0.55', '+6.91%', '386,428', '295,959', '2.673B', '37.30', '-38.22%', ''], ['FSLR', 'First Solar, Inc.', '', '214.12+14.17(+7.09%)', '+14.17', '+7.09%', '2.111M', '4.116M', '22.964B', '18.30', '-12.45%', ''], ['KC', 'Kingsoft Cloud Holdings Limited', '', '14.39+0.81(+5.96%)', '+0.81', '+5.96%', '552,418', '1.902M', '4.047B', '--', '+436.76%', ''], ['MNSO', 'MINISO Group Holding Limited', '', '20.88+1.15(+5.83%)', '+1.15', '+5.83%', '107,896', '910,258', '6.38B', '18.98', '+26.39%', ''], ['NVO', 'Novo Nordisk A/S', '', '54.33+2.50(+4.83%)', '+2.50', '+4.83%', '11.678M', '14.432M', '234.578B', '13.86', '-61.25%', ''], ['APLD', 'Applied Digital Corporation', '', '14.94+0.85(+6.00%)', '+0.85', '+6.00%', '14.76M', '49.797M', '3.906B', '--', '+242.82%', ''], ['CAR', 'Avis Budget Group, Inc.', '', '163.71+8.08(+5.19%)', '+8.08', '+5.19%', '124,857', '1.295M', '5.762B', '--', '+75.08%', ''], ['ENPH', 'Enphase Energy, Inc.', '', '36.41+1.57(+4.51%)', '+1.57', '+4.51%', '3.682M', '9.266M', '4.761B', '28.22', '-70.90%', ''], ['ELF', 'e.l.f. Beauty, Inc.', '', '121.78+5.40(+4.64%)', '+5.40', '+4.64%', '215,946', '2.545M', '6.909B', '72.06', '-27.31%', ''], ['AMRN', 'Amarin Corporation plc', '', '16.40+0.75(+4.81%)', '+0.75', '+4.81%', '16,948', '110,720', '339.198M', '--', '+16.79%', ''], ['GDS', 'GDS Holdings Limited', '', '32.65+1.24(+3.95%)', '+1.24', '+3.95%', '395,285', '2.105M', '6.432B', '296.82', '+135.10%', ''], ['PCTY', 'Paylocity Holding Corporation', '', '177.44+5.48(+3.19%)', '+5.48', '+3.19%', '101,119', '541,066', '9.788B', '44.14', '+13.12%', ''], ['CELH', 'Celsius Holdings, Inc.', '', '59.47+2.17(+3.79%)', '+2.17', '+3.79%', '1.88M', '6.792M', '15.34B', '156.50', '+37.87%', ''], ['ALHC', 'Alignment Healthcare, Inc.', '', '15.55+0.50(+3.33%)', '+0.50', '+3.33%', '115,799', '3.422M', '3.08B', '--', '+75.20%', ''], ['CNC', 'Centene Corporation', '', '29.42+0.93(+3.26%)', '+0.93', '+3.26%', '2.101M', '14.124M', '14.449B', '7.14', '-63.61%', ''], ['USM', 'Array Digital Infrastructure, Inc.', '', '77.01+2.76(+3.72%)', '+2.76', '+3.72%', '1M', '316,295', '6.623B', '--', '+41.26%', '']]\n"
+      "[['NEGG', 'Newegg Commerce, Inc.', '', '101.41+12.01(+13.47%)', '+12.01', '+13.47%', '467,170', '1.136M', '1.975B', '--', '+419.77%', ''], ['VKTX', 'Viking Therapeutics, Inc.', '', '25.94+1.58(+6.49%)', '+1.58', '+6.49%', '9.135M', '4.857M', '2.917B', '--', '-62.38%', ''], ['HTHT', 'H World Group Limited', '', '35.17+1.82(+5.44%)', '+1.82', '+5.44%', '1.407M', '1.763M', '10.794B', '24.59', '+16.94%', ''], ['COCO', 'The Vita Coco Company, Inc.', '', '35.83+1.89(+5.57%)', '+1.89', '+5.57%', '345,220', '645,720', '2.036B', '33.49', '+33.89%', ''], ['TJX', 'The TJX Companies, Inc.', '', '140.76+6.14(+4.56%)', '+6.14', '+4.56%', '3.953M', '5.24M', '157.029B', '33.12', '+11.97%', ''], ['MDT', 'Medtronic plc', '', '93.56+3.65(+4.07%)', '+3.65', '+4.07%', '3M', '8.067M', '119.868B', '25.92', '+2.70%', ''], ['PPC', \"Pilgrim's Pride Corporation\", '', '47.46+1.77(+3.86%)', '+1.77', '+3.86%', '345,299', '1.205M', '11.273B', '9.14', '+8.69%', ''], ['AS', 'Amer Sports, Inc.', '', '36.84+1.10(+3.08%)', '+1.10', '+3.08%', '1.995M', '4.176M', '20.43B', '99.57', '+152.58%', ''], ['NGD', 'New Gold Inc.', '', '5.30+0.16(+3.22%)', '+0.16', '+3.22%', '3.468M', '19.775M', '4.209B', '26.48', '+90.71%', ''], ['UA', 'Under Armour, Inc.', '', '5.11+0.11(+2.20%)', '+0.11', '+2.20%', '1.377M', '3.724M', '2.21B', '23.23', '-38.27%', '']]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'missing': [], 'shape': (25, 12), 'na_total': 25}"
+       "{'missing': [], 'shape': (10, 12), 'na_total': 10}"
       ]
      },
      "execution_count": 5,
@@ -209,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/scrape_site-yahoo_finance_table-gainers_20250818-095418.csv\n"
+      "Saved data/raw/scrape_site-yahoo_finance_table-gainers_20250820-103004.csv\n"
      ]
     }
    ],
